build.log

> sharoobi-backoffice@0.1.0 build
> vite build

vite v5.4.21 building for production...
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /workspaces/Backoffice): [Error] Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- /workspaces/Backoffice/postcss.config.cjs

(@/workspaces/Backoffice/postcss.config.cjs)
Error: Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- /workspaces/Backoffice/postcss.config.cjs

(@/workspaces/Backoffice/postcss.config.cjs)
    at load (file:///workspaces/Backoffice/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///workspaces/Backoffice/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///workspaces/Backoffice/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///workspaces/Backoffice/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///workspaces/Backoffice/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v24.11.1
